[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/ui/RollHistoryEntry.gd" id="1"]
[ext_resource type="Script" path="res://scripts/UIScalable.gd" id="2"]

[node name="RollHistoryEntry" type="VBoxContainer"]
script = ExtResource("1")

[node name="BG" type="ColorRect" parent="."]
color = Color(0, 0, 0, 1)

[node name="Main" type="VBoxContainer" parent="BG"]

[node name="Header" type="HBoxContainer" parent="BG/Main"]

[connection signal="gui_input" from="Header" to="." method="_on_Header_gui_input"]

[node name="TimestampLabel" type="Label" parent="BG/Main/Header"]
script = ExtResource("2")
SC_base_font_IN = 20
SC_base_size_IN = Vector2(0,40)

[node name="SummaryLabel" type="Label" parent="BG/Main/Header"]
script = ExtResource("2")
SC_base_font_IN = 20
SC_base_size_IN = Vector2(0,40)

[node name="ArrowIcon" type="TextureRect" parent="BG/Main/Header"]
expand_mode = 0
stretch_mode = 1
texture_filter = 1

[node name="Expanded" type="VBoxContainer" parent="BG/Main"]
visible = false

[node name="MetaLabel" type="Label" parent="BG/Main/Expanded"]
script = ExtResource("2")
SC_base_font_IN = 20
SC_base_size_IN = Vector2(0,40)

[node name="JSONLabel" type="Label" parent="BG/Main/Expanded"]
visible = false
script = ExtResource("2")
SC_base_font_IN = 20
SC_base_size_IN = Vector2(0,40)
